<resources>
    <string name="app_name">jss8ny</string>
    <string name="bucket_list_name">UVA Bucket List</string>

    <string name="description_title">Description:</string>
    <string name="due_date_title">Due Date:</string>
    <string name="complete_date_title">Completed Date:</string>

    <string name="textbox_hint">Enter your bucket list item here</string>

    <string name="add_item_title">Add Bucket List Item</string>
    <string name="add_item_button">Submit</string>

    <string name="edit_item_title">Edit Bucket List Item</string>
    <string name="edit_item_button">Update</string>

    <string name="no_complete_date">Item has not been completed yet.</string>
</resources>